--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="header-navigation">
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
@@ -16,7 +17,7 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="header-addres">
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
