--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-link link" href="./index.html">WebStudio</a>
+        <a class="header-link-logo link" href="./index.html"> Web<span>Studio</span> </a>
         <ul class="header-list list">
           <li class="header-item">
             <a class="header-link link" href="">Studio</a>
