--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="body">
+  <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-link-logo link" href="./index.html"> Web<span>Studio</span> </a>
+        <a class="header-link-logo link" href="./index.html">
+          Web<span>Studio</span>
+        </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="">Portfolio</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="header-adress">
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-adress-link link" href="mailto:info@devstudio.com"
+      <address class="header-address">
+        <ul class="header-address-list list">
+          <li class="header-address-item">
+            <a class="header-address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-item">
-            <a class="header-adress-link link" href="tel:+110001111111"
+            <a class="header-address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
