--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="header-navigation">
         <a class="header-link-logo link" href="./index.html">
