--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-link-logo link" href="./index.html">
-          Web<span>Studio</span>
+          Web<span class="header-link-logo-second">Studio</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
@@ -60,7 +60,9 @@
     </main>
     <footer>
       <h2 hidden="">attitude</h2>
-      <a class="header-link link" href="./index.html">WebStudio</a>
+      <a class="header-link-logo link" href="./index.html">
+        Web<span class="header-link-logo-second">Studio</span>
+      </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
