--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-link-logo link" href="./index.html">
-          Web<span>Studio</span>
+          Web<span class="header-link-logo-second">Studio</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
@@ -47,13 +47,13 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="about">
         <h2 hidden="">description</h2>
-        <ul class="list">
+        <ul class="about-list list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -151,7 +151,9 @@
     </main>
     <footer>
       <h2 hidden="">attitude</h2>
-      <a class="header-link link" href="./index.html">WebStudio</a>
+      <a class="header-link-logo link" href="./index.html">
+        Web<span class="header-link-logo-second">Studio</span>
+      </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
