--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     </main>
     <footer>
       <h2 hidden="">attitude</h2>
-      <a class="header-link-logo link" href="./index.html">
+      <a class="footer-link-logo link" href="./index.html">
         Web<span class="header-link-logo-second">Studio</span>
       </a>
       <p>
