--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
         <button class="hero-btn" type="button">Order Service</button>
       </section>
       <section class="about">
-        <h2 hidden="">description</h2>
+        <h2 class="about-hidden" hidden="">description</h2>
         <ul class="about-list list">
-          <li>
-            <h3>Strategy</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-title">Strategy</h3>
+            <p class="about-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-title">Punctuality</h3>
+            <p class="about-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-title">Diligence</h3>
+            <p class="about-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-title">Technologies</h3>
+            <p class="about-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
