--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul class="list">
-          <li>
+      <section class="benefits">
+        <h2 class="benefits-title">What are we doing</h2>
+        <ul class="benefits-list list">
+          <li class="benefits-item">
             <img
               src="./images/img1.jpg"
               alt="monitor"
@@ -95,10 +95,10 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="benefits-item">
             <img src="./images/img2.jpg" alt="app" width="360" height="300" />
           </li>
-          <li>
+          <li class="benefits-item">
             <img src="./images/img3.jpg" alt="phone" width="360" height="300" />
           </li>
         </ul>
