--- a/index.html
+++ b/index.html
@@ -103,48 +103,48 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul class="list">
-          <li>
+      <section class="team">
+        <h2 class="team-top-title">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
               src="./images/photo1.jpg"
               alt="photo1"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photo2.jpg"
               alt="photo2"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photo3.jpg"
               alt="photo3"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photo4.jpg"
               alt="photo4"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
