--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <h2 hidden="">attitude</h2>
+    <footer class="footer">
+      <h2 class="footer-title" hidden="">attitude</h2>
       <a class="footer-link-logo link" href="./index.html">
-        Web<span class="header-link-logo-second">Studio</span>
+        Web<span class="footer-link-logo-second">Studio</span>
       </a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
