--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
             >
           </li>
           <li class="header-item">
-            <a class="header-adress-link link" href="tel:+110001111111"
+            <a class="header-address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -58,15 +58,15 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <h2 hidden="">attitude</h2>
-      <a class="footer-link-logo link" href="./index.html">
-        Web<span class="header-link-logo-second">Studio</span>
-      </a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+    <footer class="footer">
+        <h2 class="footer-title" hidden="">attitude</h2>
+        <a class="footer-link-logo link" href="./index.html">
+          Web<span class="footer-link-logo-second">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </footer>
   </body>
 </html>
