--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,9 @@
           <li><button type="button">Marketing</button></li>
         </ul>
       </section>
+      <section>
+        
+      </section>
     </main>
     <footer class="footer">
         <h2 class="footer-title" hidden="">attitude</h2>
