--- a/portfolio.html
+++ b/portfolio.html
@@ -47,29 +47,87 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="main-navigation">
         <h1 hidden>description</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="main-navigation-list list">
+          <li>
+            <button class="main-navigation-top-btn" type="button">All</button>
+          </li>
+          <li>
+            <button class="main-navigation-btn" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="main-navigation-btn" type="button">App</button>
+          </li>
+          <li>
+            <button class="main-navigation-btn" type="button">Design</button>
+          </li>
+          <li>
+            <button class="main-navigation-btn" type="button">Marketing</button>
+          </li>
         </ul>
-      </section>
-      <section>
-        
+        <ul class="main-navigation-list list">
+          <li class="main-navigation-item">
+            <img src="./images/prt1.jpg" alt="prt1" />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
+          </li>
+          <li class="main-navigation-item">
+            <img src="./images/prt2.jpg" alt="prt2" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li class="main-navigation-item">
+            <img src="./images/prt3.jpg" alt="prt3" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+        </ul>
+        <ul class="main-navigation-list list">
+          <li class="main-navigation-item">
+            <img src="./images/prt4.jpg" alt="prt4" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li class="main-navigation-item">
+            <img src="./images/prt5.jpg" alt="prt5" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li class="main-navigation-item">
+            <img src="./images/prt6.jpg" alt="prt6" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+        <ul class="main-navigation-list list">
+          <li class="main-navigation-item">
+            <img src="./images/prt7.jpg" alt="prt7" />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </li>
+          <li class="main-navigation-item">
+            <img src="./images/prt8.jpg" alt="prt8" />
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+          </li>
+          <li class="main-navigation-item">
+            <img src="./images/prt9.jpg" alt="prt9" />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
-        <h2 class="footer-title" hidden="">attitude</h2>
-        <a class="footer-link-logo link" href="./index.html">
-          Web<span class="footer-link-logo-second">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
-      </footer>
+      <a class="footer-link-logo link" href="./index.html">
+        Web<span class="footer-link-logo-second">Studio</span>
+      </a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+      <h2 class="footer-title" hidden="">attitude</h2>
+    </footer>
   </body>
 </html>
