--- a/portfolio.html
+++ b/portfolio.html
@@ -68,53 +68,71 @@
         </ul>
         <ul class="main-navigation-list list">
           <li class="main-navigation-item">
-            <img src="./images/prt1.jpg" alt="prt1" />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <a href="">
+              <img src="./images/prt1.jpg" alt="ptr1" />
+              <h2>Banking App Interface Concept</h2>
+              <p>App</p>
+            </a>
           </li>
           <li class="main-navigation-item">
-            <img src="./images/prt2.jpg" alt="prt2" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <a href="">
+              <img src="./images/prt2.jpg" alt="prt2" />
+              <h2>Cashless Payment</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li class="main-navigation-item">
-            <img src="./images/prt3.jpg" alt="prt3" />
-            <h3>Meditation App</h3>
-            <p>App</p>
-          </li>
-        </ul>
-        <ul class="main-navigation-list list">
-          <li class="main-navigation-item">
-            <img src="./images/prt4.jpg" alt="prt4" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-          <li class="main-navigation-item">
-            <img src="./images/prt5.jpg" alt="prt5" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
-          </li>
-          <li class="main-navigation-item">
-            <img src="./images/prt6.jpg" alt="prt6" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <a href="">
+              <img src="./images/prt3.jpg" alt="prt3" />
+              <h2>Meditation App</h2>
+              <p>App</p>
+            </a>
           </li>
         </ul>
         <ul class="main-navigation-list list">
           <li class="main-navigation-item">
-            <img src="./images/prt7.jpg" alt="prt7" />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <a href="">
+              <img src="./images/prt4.jpg" alt="prt4" />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li class="main-navigation-item">
-            <img src="./images/prt8.jpg" alt="prt8" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <a href="">
+              <img src="./images/prt5.jpg" alt="prt5" />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+            </a>
           </li>
           <li class="main-navigation-item">
-            <img src="./images/prt9.jpg" alt="prt9" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <a href="">
+              <img src="./images/prt6.jpg" alt="prt6" />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
+        </ul>
+        <ul class="main-navigation-list list">
+          <li class="main-navigation-item">
+            <a href="">
+              <img src="./images/prt7.jpg" alt="prt7" />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+            </a>
+          </li>
+          <li class="main-navigation-item">
+            <a href="">
+              <img src="./images/prt8.jpg" alt="prt8" />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+            </a>
+          </li>
+          <li class="main-navigation-item">
+            <a href="">
+              <img src="./images/prt9.jpg" alt="prt9" />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
