--- a/portfolio.html
+++ b/portfolio.html
@@ -68,70 +68,70 @@
         </ul>
         <ul class="main-navigation-list list">
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt1.jpg" alt="ptr1" />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="main-navigation-title">Banking App Interface Concept</h2>
+              <p class="main-navigation-text">App</p>
             </a>
           </li>
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt2.jpg" alt="prt2" />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="main-navigation-title">Cashless Payment</h2>
+              <p class="main-navigation-text">Marketing</p>
             </a>
           </li>
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt3.jpg" alt="prt3" />
-              <h2>Meditation App</h2>
-              <p>App</p>
+              <h2 class="main-navigation-title">Meditation App</h2>
+              <p class="main-navigation-text">App</p>
             </a>
           </li>
         </ul>
         <ul class="main-navigation-list list">
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt4.jpg" alt="prt4" />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="main-navigation-title">Taxi Service</h2>
+              <p class="main-navigation-text">Marketing</p>
             </a>
           </li>
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt5.jpg" alt="prt5" />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="main-navigation-title">Screen Illustrations</h2>
+              <p class="main-navigation-text">Design</p>
             </a>
           </li>
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt6.jpg" alt="prt6" />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="main-navigation-title">Online Courses</h2>
+              <p class="main-navigation-text">Marketing</p>
             </a>
           </li>
         </ul>
         <ul class="main-navigation-list list">
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt7.jpg" alt="prt7" />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="main-navigation-title">Instagram Stories Concept</h2>
+              <p class="main-navigation-text">Design</p>
             </a>
           </li>
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt8.jpg" alt="prt8" />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="main-navigation-title">Organic Food</h2>
+              <p class="main-navigation-text">Web Site</p>
             </a>
           </li>
           <li class="main-navigation-item">
-            <a href="">
+            <a class="main-navigation-link link" href="">
               <img src="./images/prt9.jpg" alt="prt9" />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="main-navigation-title">Fresh Coffee</h2>
+              <p class="main-navigation-text">Web Site</p>
             </a>
           </li>
         </ul>
