--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <h1 hidden>description</h1>
         <ul class="main-navigation-list list">
           <li>
-            <button class="main-navigation-top-btn" type="button">All</button>
+            <button class="main-navigation--btn" type="button">All</button>
           </li>
           <li>
             <button class="main-navigation-btn" type="button">Web Site</button>
@@ -70,7 +70,9 @@
           <li class="main-navigation-item">
             <a class="main-navigation-link link" href="">
               <img src="./images/prt1.jpg" alt="ptr1" />
-              <h2 class="main-navigation-title">Banking App Interface Concept</h2>
+              <h2 class="main-navigation-title">
+                Banking App Interface Concept
+              </h2>
               <p class="main-navigation-text">App</p>
             </a>
           </li>
@@ -89,29 +91,29 @@
             </a>
           </li>
         </ul>
-        <ul class="main-navigation-list list">
-          <li class="main-navigation-item">
-            <a class="main-navigation-link link" href="">
-              <img src="./images/prt4.jpg" alt="prt4" />
-              <h2 class="main-navigation-title">Taxi Service</h2>
-              <p class="main-navigation-text">Marketing</p>
-            </a>
-          </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-link link" href="">
-              <img src="./images/prt5.jpg" alt="prt5" />
-              <h2 class="main-navigation-title">Screen Illustrations</h2>
-              <p class="main-navigation-text">Design</p>
-            </a>
-          </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-link link" href="">
-              <img src="./images/prt6.jpg" alt="prt6" />
-              <h2 class="main-navigation-title">Online Courses</h2>
-              <p class="main-navigation-text">Marketing</p>
-            </a>
-          </li>
-        </ul>
+
+        <li class="main-navigation-item">
+          <a class="main-navigation-link link" href="">
+            <img src="./images/prt4.jpg" alt="prt4" />
+            <h2 class="main-navigation-title">Taxi Service</h2>
+            <p class="main-navigation-text">Marketing</p>
+          </a>
+        </li>
+        <li class="main-navigation-item">
+          <a class="main-navigation-link link" href="">
+            <img src="./images/prt5.jpg" alt="prt5" />
+            <h2 class="main-navigation-title">Screen Illustrations</h2>
+            <p class="main-navigation-text">Design</p>
+          </a>
+        </li>
+        <li class="main-navigation-item">
+          <a class="main-navigation-link link" href="">
+            <img src="./images/prt6.jpg" alt="prt6" />
+            <h2 class="main-navigation-title">Online Courses</h2>
+            <p class="main-navigation-text">Marketing</p>
+          </a>
+        </li>
+
         <ul class="main-navigation-list list">
           <li class="main-navigation-item">
             <a class="main-navigation-link link" href="">
