--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,8 @@
           <li>
             <button class="main-navigation-btn" type="button">Marketing</button>
           </li>
-
+        </ul>
+        <ul class="main-navigation-list list">
           <li class="main-navigation-item">
             <a class="main-navigation-link link" href="">
               <img src="./images/prt1.jpg" alt="ptr1" />
